package main.minesweeper.game;

public enum EndReason {
    QUIT,
    WIN,
    EXPLOSION
}
