package main.minesweeper.tile;

public enum TileState {
    HIDDEN,
    FLAGGED,
    REVEALED
}
