@startuml
'https://plantuml.com/class-diagram

class GameManager {
    - time: float
    - score: int
    - grid: Grid
    - explosionCount: int
    - inputHandler: InputHandler
    +start(): void
    +processInput(): void
    +end(EndReason reason): void
}
class InputHandler {
    +lastCoord: int[2]
    +lastInput: Input
    +awaitInput(): Input
}

note top of GameManager : stores game state,\nhandles game operations

enum Input {
    FLAG,
    INTERACT,
    COORD
}

enum EndReason {
    WIN,
    EXPLOSION
}

enum TileState {
    HIDDEN,
    FLAGGED,
    REVEALED
}

class Grid {
    +seed: int
    +width: int
    +height: int
    +grid: Tile[][]
    -initialiseExplosionTiles(int explosionCount): void
    -initialiseNumberTiles(): void
    +setupTiles(): void
}

abstract class Tile {
    - state: TileState
    +interact(): void
    +display(): void
}

class NumberTile extends Tile {
    +nearbyExplosions: int
}
class ExplosionTile extends Tile {
}

GameManager <-- Grid
GameManager <-- InputHandler
Grid <-- Tile

note as N1
Functional requirements
- Text based user interface
- Retrieve user input
- Minesweeper game logic
    - Tile interactions
    - Grid initialisation
    - Reset game

Non-functional requirements
- Difficulty
- Timer
- Score
- A nice looking TUI
endnote

@enduml